--- a/src/components/Notes.css
+++ b/src/components/Notes.css
@@ -24,9 +24,10 @@
 }
 
 #notes-field {
-    width: 80%;
-    height: 70%;
-    font-size: 24px;
+  padding: 20px;
+  width: 80%;
+  height: 60%;
+  font-size: 24px;
 }
 
 .notes-tab {
@@ -51,17 +52,23 @@
 }
 
 .notes, .notes-tab {
-    box-shadow: 0px 8px rgba(10, 10, 10, 0.8);
+    box-shadow: 0px 8px rgba(10, 10, 10, 0.5);
 }
 
 .notes-tab:hover {
     /*bottom: -32%;*/
-    box-shadow: 0px 4px rgba(7, 7, 7, 0.9);
+    box-shadow: 0px 4px rgba(7, 7, 7, 0.8);
     cursor: pointer;
 }
 
 @media only screen and (min-width: 1201px) {
     .notes{
         background-image: url("../img/shutterstock_paper_min.jpg");
+    }
+  }
+
+  @media only screen and (max-height: 500px) {
+    #notes-field {
+      max-height: 100px;
     }
   }
