--- a/src/components/input/InputArea.css
+++ b/src/components/input/InputArea.css
@@ -7,6 +7,7 @@
     height: 140px;
     min-height: 200;
     background-color: #000012;
+    padding-top: 80px;
 }
 
 .form {
