--- a/src/components/output/ConversionNode.css
+++ b/src/components/output/ConversionNode.css
@@ -4,7 +4,7 @@
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 180px;
+    height: 80px;
 }
 
 .node-text {
@@ -28,11 +28,17 @@
 
 @media only screen and (min-width: 769px) {
 
+    /*
+    Goal: make these 200px across,
+    but make the number text change
+    size so it always fits
+    */
+
     .conversion-node {
         margin: 10px;
-        width: 350px;
-        height: 350px;
-        border-radius: 50%;
+        width: 360px;
+        height: 200px;
+        box-shadow: 0px 7px rgba(0,0,0,0.1);
     }
 
 
